cm4all-beng-proxy (0.7.46) unstable; urgency=low

  * handler: initialize all translate_response attributes
  * http-client: consume buffer before header length check
  * istream-pipe: clear "direct" flags in constructor

 --

cm4all-beng-proxy (0.7.45) unstable; urgency=low

  * istream-tee: separate "weak" values for the two outputs
  * fcache: don't close output when caching has been canceled
  * tcache: copy the attribute "secure_cookie"

 -- Max Kellermann <mk@cm4all.com>  Thu, 10 Jun 2010 15:21:34 +0200

cm4all-beng-proxy (0.7.44) unstable; urgency=low

  * http-client: check response header length
  * http-server: check request header length

 -- Max Kellermann <mk@cm4all.com>  Mon, 07 Jun 2010 16:51:57 +0200

cm4all-beng-proxy (0.7.43) unstable; urgency=low

  * http-cache: fixed NULL pointer dereference when storing empty response
    body on the heap

 -- Max Kellermann <mk@cm4all.com>  Tue, 01 Jun 2010 18:52:45 +0200

cm4all-beng-proxy (0.7.42) unstable; urgency=low

  * fork: check "direct" flag again after buffer flush
  * pool: pool_unref_denotify() remembers the code location
  * sink-{buffer,gstring}: don't invoke callback in abort()
  * async: added another debug flag to verify correctness

 -- Max Kellermann <mk@cm4all.com>  Mon, 31 May 2010 21:15:58 +0200

cm4all-beng-proxy (0.7.41) unstable; urgency=low

  * http-cache: initialize response status and headers on empty body

 -- Max Kellermann <mk@cm4all.com>  Tue, 25 May 2010 16:27:25 +0200

cm4all-beng-proxy (0.7.40) unstable; urgency=low

  * http-cache: fixed NULL pointer dereference when storing empty response
    body in memcached

 -- Max Kellermann <mk@cm4all.com>  Tue, 25 May 2010 15:04:44 +0200

cm4all-beng-proxy (0.7.39) unstable; urgency=low

  * memcached-stock: close value on connect failure
  * http: implement remaining status codes
  * http-cache: allow caching empty response body
  * http-cache: cache status codes 203, 206, 300, 301, 410