@@ -3,6 +3,7 @@ cm4all-beng-proxy (0.7.46) unstable; urgency=low
   * handler: initialize all translate_response attributes
   * http-client: consume buffer before header length check
   * istream-pipe: clear "direct" flags in constructor
+  * istream-pipe: return gracefully when handler blocks
 
  --
 
